--- a/css/layout.css
+++ b/css/layout.css
@@ -66,7 +66,6 @@ header .banner-text h1 {
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
-   font: 30px/1.9em 'librebaskerville-regular', serif;
    color: white;
    margin: 0 auto;
    width: 70%;
@@ -253,6 +252,13 @@ ul#nav li.current a { color: #5abfb8; }
 #resume ul {
   list-style-type: circle;
   list-style-position: inside;
+  text-indent:-20px;
+}
+
+#resume .title {
+  margin-bottom: 50px;
+  font-family: "Times New Roman", Times, serif;
+  font-style: italic;
 }
 
 #resume .textarbeit {
@@ -368,7 +374,7 @@ ul#nav li.current a { color: #5abfb8; }
 /* ------------------------------------------------------------------ */
 
 footer {
-   padding-top: 48px;
+   padding-top: 70px;
    margin-bottom: 48px;
    color: #303030;
    font-size: 14px;
@@ -410,7 +416,6 @@ footer .copyright  li:first-child:before {
 	position: absolute;
 	top: -24px;
   left: 50%;
-  margin-left: -30px;
 }
 #go-top a {
   bottom: 30px;
