--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -229,13 +229,17 @@
    #resume .header-col {
       padding-top: 0;
       margin-bottom: 48px;
-      text-align: center;
+      text-align: left;
    }
    #resume h1 { letter-spacing: 3px; }
    #resume .main-col { padding-right: 30px; }
-   #resume h3, #resume .info { text-align: center; }
+   #resume h3, #resume .info { text-align: left; }
 
    .bars { width: 100%; }
+
+   #resume img {
+     display: none;
+   }
 
 
    /* Call To Action Section
@@ -323,17 +327,11 @@
    footer .copyright li { margin-right: 12px; }
 
    /* social links */
-   footer .social-links { font-size: 22px; }
-   footer .social-links li { margin-left: 18px; }
+   footer .social-links { display: none; }
 
    /* Go To Top Button */
-   #go-top { margin-left: -22px; }
-   #go-top a {
-   	width: 54px;
-   	height: 54px;
-      font-size: 18px;
-      line-height: 54px;
-   }
+   #go-top { display: none; }
+
 
 
 }
@@ -357,6 +355,7 @@
    header .banner-text h3 {
       font: 14px/1.9em 'librebaskerville-regular', sans-serif;
       width: 90%;
+      text-align: left;
    }
 
    /* header social links */
